--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -32,6 +32,9 @@
                 <div class="row vh-100">
                     <div class="col-sm-10 col-md-8 col-lg-6 col-xl-5 mx-auto d-table h-100">
                         <div class="d-table-cell align-middle">
+                            <div th:if="${message != null}" class="alert alert-info" role="alert">
+                                <p th:text="${message}"></p>
+                            </div>
                             <div class="text-center mt-4">
                                 <p class="lead" style="font-size: 24px;">
                                     Впишете се, за да достъпите акаунта си!
@@ -53,14 +56,12 @@
                                                 <input class="form-control form-control-lg" type="password"
                                                        name="password" placeholder="Въведете паролата си"
                                                        style="height: 50px; font-size: 16px;"/>
-                                                <div th:if="${param.error}" class="text-danger"
-                                                     style="margin-top: 15px;">
-                                                    <p th:text="${param.error}"></p>
+
+                                                <div th:if="${error != null}" class="alert alert-danger" role="alert">
+                                                    <p th:text="${error}"></p>
                                                 </div>
-                                                <div th:if="${param.message}" class="text-success"
-                                                     style="margin-top: 15px;">
-                                                    <p th:text="${param.message}"></p>
-                                                </div>
+
+
                                                 <input type="submit"
                                                        class="btn btn-block btn-primary text-white py-3 px-5"
                                                        value="Влез">
